# mlops

./: README.md  config.yml  kafka-values.yaml  kafka_meesage.py  kafka_test.py  minio-cluster-config.yaml  pyproject.toml  values.yaml
cluster/: k3d-config.yaml
docs/: k3d.md  monitoring.md
docs/databases/clickhouse/: pods.md  troubleshoot.md
infrastructure/airflow/: ingress.yaml  prepare-db.sql  values.yaml
infrastructure/airflow/dags/: hello_world.py
infrastructure/airflow/scripts/: install-airflow.sh  uninstall-airflow.sh
infrastructure/cluster/: config-cluster.yaml  k3d-cluster-config.yaml  k3d-config.yaml
infrastructure/database/clickhouse/: clickhouse-instance.yaml  clickhouse-service.yaml
infrastructure/database/clickhouse-hpa/: clickhouse-hpa.yaml  clickhouse-instance-bkp.yaml  clickhouse-instance.yaml  clickhouse-service.yaml  kafka.yaml  zookeeper.yaml  zookeeper_bkp.yaml
infrastructure/database/kafka/: kafka.yaml
infrastructure/database/postgres/: load-balancer.yaml
infrastructure/minio/: ingress.yaml  values.yaml
infrastructure/minio/scripts/: install.sh  uninstall-minio.sh
infrastructure/monitoring/: monitoring-values.yaml
infrastructure/postgres/: ingress.yaml  postgres-storage.yaml  values.yaml
infrastructure/spark/: jupyter-deployment.yaml
infrastructure/traefik/: dashboard.yaml  values.yaml
scripts/: install-hpa.sh  install-latest.sh  install.sh  uninstall.sh
scripts/archive/: install v0.sh  install.sh  update-hosts.sh
storage/: minio-deployment.yaml  minio-service.yaml  persistent-volumes.yaml
(+2 files in other folders)
